--- a/client.cfg
+++ b/client.cfg
@@ -140,3 +140,6 @@ gc.buffer "4096"
 client.headlerp_inertia "0"
 graphics.itemskinunload "0"
 graphics.itemskins "0"
+global.censornudity "2"
+tree.quality "1000"
+legs.enablelegs "0"
